# compliance-trestle-fedramp

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MAINTAINERS.md  Makefile  README.md  pyproject.toml  setup.cfg  ssp.sch.xsl
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: new_collaborator.md
.github/workflows/: codeql-analysis.yml  conventional-pr.yml  python-push.yml  python-test.yml
scripts/: download_oscal_converters.sh  mac_saxon_install.sh  ubuntu_saxon_install.sh
tests/: conftest.py  test_utils.py
tests/data/json/: simplified_fedramp_ssp_template.json
tests/manual_tests/: test_binary.sh
tests/trestle_fedamp/: token_test.py
tests/trestle_fedramp/: __init__.py
tests/trestle_fedramp/commands/: __init__.py  transform_test.py  validate_test.py
tests/trestle_fedramp/core/: __init__.py  baselines_test.py  docx_helper_test.py  fedramp_test.py  fedramp_values_test.py  format_convert_test.py  ssp_reader_test.py
trestle_fedramp/: __init__.py  const.py
trestle_fedramp/commands/: __init__.py  transform.py  validate.py
trestle_fedramp/core/: __init__.py  baselines.py  docx_helper.py  fedramp.py  fedramp_values.py  format_convert.py  ssp_reader.py
trestle_fedramp/resources/: __init__.py
trestle_fedramp/resources/fedramp-source/content/templates/: SSP-Appendix-A-High-FedRAMP-Security-Controls.docx  SSP-Appendix-A-Low-FedRAMP-Security-Controls.docx  SSP-Appendix-A-Moderate-FedRAMP-Security-Controls.docx
