# Added to aide with eventual transition away from setup.py
[build-system]
requires = [
    "setuptools >= 35.0.2",
    "setuptools_scm >= 2.0.0, <3"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.2"
testpaths = [
    "tests"
]

[tool.semantic_release]
build_command = "python setup.py sdist bdist_wheel"
version_variables = ["trestle_fedramp/__init__.py:__version__"]
commit_author = "semantic-release <semantic-release>"
major_on_zero = false

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
default_bump_level = 0


[tool.semantic_release.branches.main]
match = "(main)"
prerelease_token = "rc"
prerelease = false

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false
insecure = false

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]