[metadata]
name = compliance-trestle-fedramp
version = attr: trestle_fedramp.__version__
description = Trestle plugin for FedRAMP validation and format conversion
author = IBM
author_email = avikas@in.ibm.com
license = Apache Software License v2
url = https://github.com/IBM/compliance-trestle-fedramp
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Operating System :: Microsoft
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
long_description_content_type = text/markdown
long_description = file: README.md
python_require= '>=3.8'
[options]
packages = find:
include_package_data = True

install_requires =
    compliance-trestle>=2.5.1
    saxonche>=12.4.1.0
    python-docx>=1.1.0

[options.packages.find]
include = trestle_fedramp*
exclude = tests

# Needs changes
[bdist_wheel]
universal = 1


[options.extras_require]
dev =
    pytest>=5.4.3
    pytest-cov>=2.10.0
    pytest-xdist
    pre-commit>=2.4.0
    setuptools
    wheel
    yapf
    python-semantic-release
    pep8-naming
    pytest-random-order
    python-dateutil
    mypy
    # # Docs website
    mkdocs
    mkdocstrings
    mkdocs-material
    markdown-include
    pymdown-extensions
    livereload
    ## Constrain system
    pylint

   
    
[semantic_release]
version_variable=trestle_fedramp/__init__.py:__version__
branch = main
upload_to_pypi = true
version_source = commit

[flake8]
# WARNING: This should be kept compatible with .pre-commit-config.yaml
ignore = P1,C812,C813,C814,C815,C816
max-line-length=120

[mypy]
plugins = pydantic.mypy

follow_imports = normal
strict_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
disallow_any_generics = True
check_untyped_defs = True
no_implicit_reexport = True
show_error_codes = True
show_error_context = True
# disallow-untyped-calls = True
disallow_untyped_defs = True



[pydantic-mypy]
init_forbid_extra = True
init_typed = True
warn_required_dynamic_aliases = True
warn_untyped_fields = True

[coverage:run]
relative_files = True